k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gnavi4-backend
  namespace: sk-team-04
spec:
  selector:
    app: gnavi4-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
